--- a/ch02/3-jest-basic/package.json
+++ b/ch02/3-jest-basic/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
     "jest": "^24.8.0"
   }
 }
